# cadio-backend

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
cadio/: __init__.py  affect.py  cli.py  config.py  db.py  render.py  select.py  storage.py  store.py  versions.py
cadio/agent/: corpus.py  orchestrator.py
cadio/api/: app.py  auth.py  history.py  limits.py
cadio/engines/: base.py
cadio/engines/precision/: _sandbox_runner.py  _worker_loop.py  engine.py  measure.py  pool.py
cadio/validation/: __init__.py  drift.py
docs/: FRONTEND-PLAN.md  OVERVIEW.md  PROJECT.md  ROADMAP.md  SCALE-ANALYSIS.md  artifact-strategy.md  performance.md  reliability.md  selection-accuracy.md  storage-decision.md
examples/: simple_box.py
forma/: __init__.py  cli.py  config.py  render.py  store.py  trace.py
forma/agent/: corpus.py  orchestrator.py
forma/api/: app.py  auth.py  history.py  limits.py  providers.py
forma/engines/: __init__.py  base.py
forma/engines/precision/: __init__.py  _sandbox_runner.py  engine.py  inspect.py  pool.py
forma/validation/: mesh.py
scripts/: deploy_backend.sh  loadsim.py
web/: index.html
