[project]
name = "forma"
version = "0.0.1"
description = "AI-agent 3D design platform — generic shell + pluggable geometry engines"
requires-python = ">=3.10,<3.13"
dependencies = [
    "build123d",
    "trimesh",
    "manifold3d",
    "shapely",
    "rtree",
    "opencv-python-headless",
    "matplotlib",
    "numpy",
    "fastapi",
    "uvicorn[standard]",
    "litellm",
    "pydantic",
    "authlib>=1.7.2",
    "itsdangerous>=2.2.0",
    "httpx>=0.28.1",
]

[project.scripts]
forma = "forma.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["forma*"]
