[project]
name = "cadio"
version = "0.0.1"
description = "CADIO — AI-native 3D creation platform: generic shell + pluggable geometry engines"
requires-python = ">=3.10,<3.13"
dependencies = [
    "build123d",
    "trimesh",
    "manifold3d",
    "shapely",
    "rtree",
    "opencv-python-headless",
    "matplotlib",
    "numpy",
    "fastapi",
    "python-multipart",            # FastAPI file uploads (UploadFile / Form)
    "uvicorn[standard]",
    "litellm",
    "orjson",                      # litellm imports it on the completion path; not always pulled in transitively
    "pydantic",
    "authlib>=1.7.2",
    "itsdangerous>=2.2.0",
    "httpx>=0.28.1",
    "fast-simplification>=0.1.13",
    "networkx>=3.4.2",
    "psycopg[binary,pool]>=3.2",   # Supabase/Postgres backend (optional at runtime; used when DATABASE_URL is set)
    "boto3>=1.34",                 # Cloudflare R2 (S3-compatible) object storage (optional; used when R2_* env is set)
]

[project.scripts]
cadio = "cadio.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["cadio*"]
